Fase5: Experiencia de catálogo y back office, falta la 5.7
